k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: food-delivery
  labels:
    app.kubernetes.io/name: food-delivery
